Renamed plantuml build action and use java modules to halve image size